# py-schemax

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  noxfile.py  pyproject.toml  sample.env.sh  sample.pyproject.toml  sample.schemax.ini  sample.schemax.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependencies.yml  security.yml
py_schemax/: __init__.py  cache.py  cli.py  config.py  model.py  output.py  rulesets.py  summary.py  utils.py  validator.py
py_schemax/schema/: dataset.py  models.py  validation.py
tests/: __init__.py  conftest.py  test_caching_and_hashing.py  test_cmd_validate.py  test_config_and_summary.py  test_integration.py  test_output_control.py  test_pydantic_schema.py  test_summary.py  test_validation_command.py  test_validator.py
tests/fixtures/: README.md
tests/fixtures/dependent_schemas/: invalid_dependency_a.yaml  invalid_dependency_b.yaml  invalid_dependency_c.yaml  valid_dependency_a.yaml  valid_dependency_b.yaml  valid_dependency_c.yaml
tests/fixtures/invalid_schemas/: invalid_columns.yaml  invalid_json.json  invalid_missing_columns.yaml  invalid_missing_name.json  invalid_types.json  invalid_unsupported_format.txt  invalid_yaml.yaml
tests/fixtures/valid_schemas/: valid_complex_schema.yaml  valid_simple_schema.json
