[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-schemax"
version = "0.0.1"
description = "A CLI tool built with Click"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachebox>=5.0.1",
    "click>=8.2.1",
    "larch-pickle>=1.4.6",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "xxhash>=3.5.0",
]

[project.scripts]
schemax = "py_schemax.cli:main"

[dependency-groups]
dev = [
    "nox>=2024.4.15",
    "pip-audit>=2.9.0",
    "pre-commit>=3.5.0",
    "pytest>=8.4.1",
    "safety>=3.2.9",
    "types-PyYAML>=6.0.12.20240917",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.bandit]
exclude_dirs = ["tests", ".nox"]
skips = ["B101"]  # Skip assert_used test

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "larch.*",
    "cachebox.*",
]
ignore_missing_imports = true
